# uc-intg-emby

./: Dockerfile  README.md  docker-compose.yml  docker-entry.sh  driver.json  pyproject.toml  requirements.txt
.github/workflows/: build.yml
uc_intg_emby/: __init__.py  client.py  config.py  driver.py  media_player.py  setup.py
